<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_buy"
            android:icon="@drawable/baseline_local_offer_black_24dp"
            android:title="@string/nav_buy" />

        <item
            android:id="@+id/nav_sell"
            android:icon="@drawable/baseline_monetization_on_black_24dp"
            android:title="@string/nav_sell" />

        <item
            android:id="@+id/nav_suppliers"
            android:icon="@drawable/baseline_language_black_24dp"
            android:title="@string/suppliers" />

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/baseline_account_circle_black_24dp"
            android:title="@string/nav_profile" />

    </group>

    <group
        android:id="@+id/group2"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/baseline_settings_black_24dp"
            android:title="@string/settings" />

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/baseline_info_black_24dp"
            android:title="@string/about" />

    </group>


</menu>